// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paintActions Dispatches the correct action and payload (captureLastXY) 1`] = `
Array [
  Object {
    "lastX": 54,
    "lastY": 67,
    "type": "CAPTURE_LAST_X_Y",
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (captureXY) 1`] = `
Array [
  Object {
    "type": "CAPTURE_X_Y",
    "x": 64,
    "y": 784,
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (chooseTool) 1`] = `
Array [
  Object {
    "tool": "pencil",
    "type": "CHOOSE_TOOL",
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (getBgColor) 1`] = `
Array [
  Object {
    "color": "pink",
    "type": "GET_BG_COLOR",
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (getColor) 1`] = `
Array [
  Object {
    "color": "green",
    "type": "GET_COLOR",
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (mouseDown) 1`] = `
Array [
  Object {
    "type": "MOUSE_DOWN",
    "val": true,
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (toggleColorPicker) 1`] = `
Array [
  Object {
    "type": "TOGGLE_COLOR_PICKER",
    "val": false,
  },
]
`;

exports[`paintActions Dispatches the correct action and payload (whichButton) 1`] = `
Array [
  Object {
    "name": "color",
    "type": "WHICH_BUTTON",
  },
]
`;
